# auth-server

./: .gitignore  Cargo.toml
assets/: index.html  index.js  style.css
assets/register/: index.html  index.js  style.css
src/: main.rs
src/api/v1/authenticate/: authenticate.rs  mod.rs
src/api/v1/authenticate/credentials/: authenticate.rs
src/api/v1/authenticate/github/: authenticate.rs
src/api/v1/users/: create_user.rs  get_user_by_id.rs  mod.rs  users.rs
src/config/: config.rs
src/db/: db.sql
src/models/: access_token.rs  claims.rs  credentials.rs  mod.rs  user.rs  user_dto.rs
src/repositories/: mod.rs
src/repositories/access_tokens/: access_tokens.rs
src/repositories/users/: users.rs
src/services/: mod.rs
src/services/authenticate/: authenticate.rs
src/services/users/: users.rs
src/utilities/: generate_user.rs  generate_user_dto.rs  mint_jwt.rs  mod.rs
