[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = "1.41.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "json"] }
anyhow = "1.0.94"
