[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = "1.41.1"
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
anyhow = "1.0.94"
email_address = "0.2.9"
password-hash = { version = "0.5.0" }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
dotenv = "0.15.0"
